fix(Button): Allow buttons to grow vertically if text is going to overflow
This also wraps the icon with a `flex: 0 0 20px` so that the icon will always
be 20px regardless of the size of the other content. Without this the icons will
shrink as the text gets large enough to overflow.

--- a/components/Button/_styles.scss
+++ b/components/Button/_styles.scss
@@ -7,6 +7,7 @@ $caButton-border-width: 1px;
 $caButton-focus-border-width: 2px;
 $caButton-height: $ca-grid * 2;
 $caButton-formHeight: $ca-grid * 5/3;
+$caButton-vertical-padding: calc(#{$ca-grid / 2} - #{$caButton-border-width});
 
 // reset user agent syles for button elment type
 @mixin button-reset {
@@ -29,7 +30,7 @@ $caButton-formHeight: $ca-grid * 5/3;
 
   display: inline-block;
   box-sizing: border-box;
-  height: $caButton-height;
+  min-height: $caButton-height;
   border: $caButton-border-width solid;
   border-radius: $ca-border-radius;
   // looking for padding? See %caButtonContent
@@ -301,24 +302,28 @@ $caButton-formHeight: $ca-grid * 5/3;
 
   // Padding applied to button content and not button so that mix-blend-mode
   // effects can be applied to the button content but not the button border
-  padding: 0 calc(#{$ca-grid * 1} - #{$caButton-border-width});
+  padding: $caButton-vertical-padding
+    calc(#{$ca-grid * 1} - #{$caButton-border-width});
 
   %caButtonSecondary & {
-    padding: 0 calc(#{$ca-grid * 0.5} - #{$caButton-border-width});
+    padding: $caButton-vertical-padding
+      calc(#{$ca-grid * 0.5} - #{$caButton-border-width});
   }
 
   @supports (mix-blend-mode: screen) {
     %caButtonReversed%caButtonPrimary & {
-      padding: 0 ($ca-grid * 1);
+      padding: $caButton-vertical-padding ($ca-grid * 1);
     }
   }
 
   :global(.js-focus-visible) %caButton:global(.focus-visible) & {
-    padding: 0 calc(#{$ca-grid * 1} - #{$caButton-focus-border-width});
+    padding: $caButton-vertical-padding
+      calc(#{$ca-grid * 1} - #{$caButton-focus-border-width});
   }
 
   :global(.js-focus-visible) %caButtonSecondary:global(.focus-visible) & {
-    padding: 0 calc(#{$ca-grid * 0.5} - #{$caButton-focus-border-width});
+    padding: $caButton-vertical-padding
+      calc(#{$ca-grid * 0.5} - #{$caButton-focus-border-width});
   }
 }
 
@@ -338,6 +343,10 @@ $caButton-formHeight: $ca-grid * 5/3;
   &:not(:last-child) {
     @include ca-margin($end: 0.5em);
   }
+}
+
+%caButtonIconWrapper {
+  height: 20px;
 }
 
 %caButtonIconButton {
